--- a/index.html
+++ b/index.html
@@ -1,7 +1,45 @@
+<!DOCTYPE html>
 <html>
-<title>message</title>
-<head>
 <body>
-<p>jhkjhk
+
+<h2>Assigning JavaScript Values</h2>
+
+<p>In JavaScript the = operator is used to assign values to variables.</p>
+
+
+<script>
+  
+  var express = require('express')
+var bodyParser = require('body-parser')
+var recastai = require('recastai').default
+
+var connect = new recastai.connect('YOUR_REQUEST_TOKEN')
+
+var app = express()
+
+/* Server setup */
+app.set('port', 5000)
+app.use(bodyParser.json())
+app.post('/', function(req, res) {
+  connect.handleMessage(req, res, onMessage)
+})
+
+function onMessage (message) {
+  // Get the content of the message
+  var content = message.content
+
+  // Get the type of the message (text, picture,...)
+  var type = message.type
+
+  // Add a reply, and send it
+  message.addReply([{ type: 'text', content: 'Hello, world' }])
+  message.reply()
+}
+
+app.listen(app.get('port'), function () { console.log('App is listening on port ' + app.get('port')) })
+  
+  
+</script>
+
 </body>
 </html>
